# promptseal

./: .env.example  .gitignore  LICENSE  PromptSeal-CLAUDE-CODE-BRIEF.md  PromptSeal-Hackathon.md  PromptSeal-Strategy.md  PromptSeal-v0.2-PLAN.md  PromptSeal-v0.3-PLAN.md  README.md  pyproject.toml
agent/: hiring_agent.py  llm.py  tools.py
agent/data/: resumes.json
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/public/: evidence-bundle-run-12b5cf079f14.html  evidence-bundle-run-1f2fe81a76f4.html  evidence-bundle-run-3345a152239a.html  evidence-bundle-run-788d2d359738.html  evidence-bundle-run-8393bd7ec3c6.html  runs-index.json  (+21 more)
promptseal/: anchor.py  canonical.py  chain.py  crypto.py  erc8004.py  handler.py  merkle.py  receipt.py  run_summary.py  summarizer.py
scripts/: 01_register_agent.py  02_run_demo.py  03_anchor_run.py  04_export_evidence_pack.py  05_generate_summary.py  06_publish_evidence.py  07_runs_list.py  99_tamper_demo.py  build_self_contained.py  clean_demo_runs.py  demo_live.py  demo_reset.py  generate_verifier_inputs.py  rehearse_demo.sh  reset.py
tests/: test_build_self_contained.py  test_canonical.py  test_chain.py  test_clean_demo_runs.py  test_crypto.py  test_erc8004.py  test_evidence_pack.py  test_handler.py  test_merkle.py  test_publish_evidence.py  test_receipt.py  test_reset.py  test_run_summary.py  test_runs_list.py  test_summarizer.py
verifier/: canonical.js  index.html  style.css  test_canonical_cross_lang.mjs  test_e2e_node.mjs  verify.js
(+17 files in other folders)
